--- a/index.html
+++ b/index.html
@@ -1,98 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
+    <title>Tic Tac Toe</title>
 </head>
+
 <body>
-    <div class="content-container">
+    <div class="wrapper">
+        <div class="wrapper-ingame">
+            <div class="left inwrapper">
+                <h1 class="name-change">PLAYER 1</h1>
+            </div><div class="right inwrapper">
+                <h1>PLAYER 2</h1>
+            </div>
+        </div>
         <div class="app-title">
-            <h3>Tic Tac toe</h3>
+            <img src="assets/Tic-Tac-Toe-01.png">
         </div>
-
-        <div class="game-buttons">
-            <div class="newGame"><input class="button round-corner" type="submit" value="New Game" function="newGame"></div>
-            <div class="playFriend"><input class="button round-corner" type="submit" value="Play with friend" function="playFriend"></div>
-            <div class="playOnline"><input class="button round-corner" type="submit" value="Play Online" function="playOnline"></div>
-        </div>
-
-        <div class="main-container">
-            <div class="game-status">
-                <!-- <div class="versus-status"><span>Player 1</span> VS <span>Player 2</span></div>
-                <div class="winner-status">Winner: Player 1</div> -->
-                    <div class="versus">
-                        <div class="versus-icon"><span>V</span><span>S</span></div>
-                        <div class="left panel">
-                            <span class="score"> 
-                                10
-                            </span>
-                            <span class="name left-player">Player A</span>
-                        </div>
-                        <div class="right panel">
-                            <span class="score"> 10 </span>
-                            <span class="name right-player">myBot</span>
-                        </div>
-                    </div>
+        <div class="game-options">
+            <div class="play-card" id="play-friend">
+                <div class="option-icon"></div>
+                <div class="option-text"></div>
             </div>
-            
-            <div class="game-board">
-                <div class="board">
-                    <div class="row">
-                        <div class="cell" data-position='{"x":0,"y":0}'></div>
-                        <div class="cell" data-position='{"x":0,"y":1}'></div>
-                        <div class="cell" data-position='{"x":0,"y":2}'></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell" data-position='{"x":1,"y":0}'></div>
-                        <div class="cell" data-position='{"x":1,"y":1}'></div>
-                        <div class="cell" data-position='{"x":1,"y":2}'></div>
-                    </div>
-                    <div class="row">
-                        <div class="cell" data-position='{"x":2,"y":0}'></div>
-                        <div class="cell" data-position='{"x":2,"y":1}'></div>
-                        <div class="cell" data-position='{"x":2,"y":2}'></div>
-                    </div>
-                </div>
-            </div>
-            <div class="leaderboard">
-                <h3>Leaderboard</h3>
-                <div>
-                    <span>theFrontiers</span><span>Scores</span>
-                </div>
-                <div class="list">
-                    <div><span>Sarad Singh</span><span>12</span></div>
-                    <div><span>John Wick</span><span>14</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                    <div><span>Computer</span><span>18</span></div>
-                </div>
-                <!-- <div>
-                    <input class='joinBoard-btn' type="button" value="Join Board">
-                </div> -->
+            <div class="play-card" id="play-online">
+                <div class="option-icon"></div>
+                <div class="option-text"></div>
             </div>
         </div>
 
-    </div>
-    <div class="onready-container absolute">
-        <div class='content'>
+        <div class="onready-container absolute">
             <h3 class="description">every legend has a name</h3>
             <div>
-                <div class="name"><input class="input" id='userName' type="text" placeholder="and i am ..."></div>
-                <div class="nameSubmit"><input class="button round-corner" type="button" value="rememberMe" function="setUserName"></div>
+                <div class="name"><input class="input" id='userName' type="text" placeholder="and I am..." spellcheck="false" autocomplete="off"></div>
+                <div class="nameSubmit"><input class="button round-corner" id="nameSubmit" type="button" value="Let's Go!"></div>
             </div>
-            <div class="close-absolute" ><span function='close-absolute'>X</span></div>
+            <div class="close-absolute">X</div>
         </div>
+
+
+        <div class="content-container">
+            <div class="main-container">
+
+                <div class="player-0 score-board">
+                    <div class="score-box">21
+                    </div>
+                </div>
+                <div class="game-board">
+                    <div class="board">
+                        <div class="row">
+                            <div class="cell" data-position='{"x":0,"y":0}'></div>
+                            <div class="cell" data-position='{"x":0,"y":1}'></div>
+                            <div class="cell" data-position='{"x":0,"y":2}'></div>
+                        </div>
+                        <div class="row">
+                            <div class="cell" data-position='{"x":1,"y":0}'></div>
+                            <div class="cell" data-position='{"x":1,"y":1}'></div>
+                            <div class="cell" data-position='{"x":1,"y":2}'></div>
+                        </div>
+                        <div class="row">
+                            <div class="cell" data-position='{"x":2,"y":0}'></div>
+                            <div class="cell" data-position='{"x":2,"y":1}'></div>
+                            <div class="cell" data-position='{"x":2,"y":2}'></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="player-1 score-board">
+                    <div class="score-box">14
+                    </div>
+                </div>
+                <!--
+                <div class="leaderboard">
+                    <h3>Leaderboard</h3>
+                    <div>
+                        <span>theFrontiers</span><span>Scores</span>
+                    </div>
+                    <div class="list">
+                        <div><span>Sarad Singh</span><span>12</span></div>
+                        <div><span>John Wick</span><span>14</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                        <div><span>Computer</span><span>18</span></div>
+                    </div>
+                     <div>
+                    <input class='joinBoard-btn' type="button" value="Join Board">
+                </div> 
+                </div>
+-->
+            </div>
+
+        </div>
+
     </div>
+
 </body>
 <script src="js/main.js"></script>
+
 </html>
